<resources>
    <string name="app_name">LinkIO_POC</string>
    <string name="whiteboard_activity">Whiteboard</string>
    <string name="chat_activity">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="prompt_message">Message</string>
    <string name="action_send">Send</string>
    <string name="prompt_user_mail">Email Address</string>
    <string name="prompt_user_pwd">Password</string>
    <string name="prompt_user_room">Room</string>
    <string name="connect_action">Connexion</string>
    <string name="server_adress">Server address</string>

    <string name="action_leave">Leave</string>
    <string name="error_connect">Failed to connect</string>
    <string name="logo">logo</string>

    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>

</resources>