<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="0dp"
    android:fillViewport="false"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175sp"
            android:layout_height="175sp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_mail"
            android:imeActionId="@+id/mail_login"
            android:imeActionLabel="Join"
            android:imeOptions="actionUnspecified"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="40"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_pwd"
            android:imeActionId="@+id/pwd_login"
            android:imeActionLabel="Join"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="40"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/user_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_user_room"
            android:imeActionId="@+id/room_login"
            android:imeActionLabel="Join"
            android:inputType="text"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="40"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/ip_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_adress"
            android:imeActionId="@+id/server_ip"
            android:imeActionLabel="Join"
            android:inputType="text"
            android:singleLine="true"
            android:maxLines="1"
            android:maxLength="40"
            android:gravity="center"
            />

        <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/connect_action"
            android:textStyle="bold"
            />

    </LinearLayout>
</ScrollView>